--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,14 @@ body {
 }
 html, body, .public {
   background-color: black;
-  min-height: 100vh;
+  min-height: 100%;
 }
 .public {
   display: flex;
   flex-direction: column;
+}
+.big {
+  min-height: 77vh;
 }
 main {
   background-color: 'black';
